# vrbsp

./: .gitignore  CMakeLists.txt  Makefile  Model.cpp  Model.h  README.md  Structures.h  code_c++.cpp  input  main.cpp  make_input.sh  vrbsp
heu-construtiva/: Makefile~  main.cpp  main.cpp~  model.h  model.h~  t
python/: media.py  read_info.py  vrbsp.py  vrbsp_mauricio.py  vrbsp_quadratic.py
verificador/: main.cpp
